# ref-fd

./: .travis.yml  README.md  Setup.lhs  ref-fd.cabal
.github/workflows/: haskell-ci.yml
Control/Monad/: Ref.hs
Control/Monad/Ref/: Class.hs
