name:           ref-fd
version:        0.4.0.0
cabal-version:  >= 1.10
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2006-2011 Harvard University
author:         Geoffrey Mainland <mainland@eecs.harvard.edu>
maintainer:     mainland@eecs.harvard.edu
stability:      alpha
homepage:       http://www.eecs.harvard.edu/~mainland/
category:       Control
synopsis:       A type class for monads with references using functional
                dependencies.
description:    Contains a 'MonadRef' type class that abstracts over the
                details of manipulating references, allowing one to write code
                that can operate in either the ST monad or the IO monad.
build-type:     Simple

source-repository head
  type: git
  location: git://github.com/sonyandy/ref-fd.git

library
  default-language: Haskell98
  exposed-modules:
    Control.Monad.Ref
    Control.Monad.Ref.Class
  build-depends:
    base >= 4 && < 5,
    stm < 2.5,
    transformers >= 0.2 && < 0.4
  other-extensions: CPP
  if impl(ghc >= 7.2)
    cpp-options: -DLANGUAGE_DefaultSignatures
  other-extensions:
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    UndecidableInstances
  ghc-options: -Wall
